--- a/app/views/game/_game_up_comming.html.erb
+++ b/app/views/game/_game_up_comming.html.erb
@@ -1,14 +1,16 @@
 <div class="col-md-12" style="border: 1px solid #fff; margin-top: 20px; padding-bottom: 20px">
-<div class="col-md-12 text-center related-game ">Upcoming Game</div>
-<% @game_upcoming.each do |game| %>
+  <div class="col-md-12 text-center related-game ">Upcoming Game</div>
+  <% @game_upcoming = Game.upcoming(5).includes(:photos) %>
+  <% @game_upcoming.each do |game| %>
     <div class="col-md-12 text-center list-related-game">
-          
-<%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game",  :size => "20x10" ) %>
+
+      <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game", :size => "20x10") %>
+      <br>
+      <a><strong> <%= link_to game_detail_path(id: game.id) do %> <%= game.name %>
+        <% end %></strong>
         <br>
-          <a><strong> <%=link_to game_detail_path(id: game.id) do %> <%= game.name %><%end%></strong>
-          <br>
-          <strong><%= game.relase_date.strftime("%F") %></strong>
-        </a>
+        <strong><%= game.relase_date.strftime("%F") %></strong>
+      </a>
     </div>
-<% end %>
+  <% end %>
 </div>
