--- a/app/views/search/advance_search.html.erb
+++ b/app/views/search/advance_search.html.erb
@@ -16,15 +16,15 @@
               <%= select_tag "platform", options_from_collection_for_select(Platform.all, :id, :name, :selected => params[:platform]), {:class => 'form-control', :prompt => ""} %>
             </div>
 
-<!--            <div class="col-xs-12 col-md-2">-->
-<!--              Min Score:-->
-              <%#= select_tag "min_score", options_for_select(["1", "2", "3", "4", "5"], :selected => params[:min_score]), {:class => 'form-control', :prompt => ""} %>
-<!--            </div>-->
+            <!--            <div class="col-xs-12 col-md-2">-->
+            <!--              Min Score:-->
+            <%#= select_tag "min_score", options_for_select(["1", "2", "3", "4", "5"], :selected => params[:min_score]), {:class => 'form-control', :prompt => ""} %>
+            <!--            </div>-->
 
-<!--            <div class="col-xs-12 col-md-2">-->
-<!--              Max Score:-->
-              <%#= select_tag "max_score", options_for_select(["1", "2", "3", "4", "5"], :selected => params[:max_score]), {:class => 'form-control', :prompt => ""} %>
-<!--            </div>-->
+            <!--            <div class="col-xs-12 col-md-2">-->
+            <!--              Max Score:-->
+            <%#= select_tag "max_score", options_for_select(["1", "2", "3", "4", "5"], :selected => params[:max_score]), {:class => 'form-control', :prompt => ""} %>
+            <!--            </div>-->
 
             <% @search_results.each do |game| %>
               <%= hidden_field_tag "game_ids[]", game.id.to_i %>
@@ -44,11 +44,14 @@
             <% @search_results.each do |game| %>
               <div class="col-md-12 fix-pading-content">
                 <div class="col-xs-12 col-md-4">
-                  <%=link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image.url, :class => "img-responsive fix-box-img-top-game") %><%end%>
+                  <%= link_to game_detail_path(id: game.id) do %>
+                    <%= image_tag(game.photos.first.image.url, :class => "img-responsive fix-box-img-top-game") if game.photos.first.present? %>
+                  <% end %>
                 </div>
                 <div class="col-xs-12 col-md-8 content-game-home-page background-item">
                   <div class="col-md-12">
-                    <%=link_to game_detail_path(id: game.id),{:class=>"name_game"}  do %> <%= game.name %><%end%>  
+                    <%= link_to game_detail_path(id: game.id), {:class => "name_game"} do %> <%= game.name %>
+                    <% end %>
                   </div>
                   <div class="col-xs-12 col-md-6">
                     <b>Release date: <%= game.relase_date.to_date %> </b>
@@ -71,12 +74,12 @@
                     <b>Genre: </b>
                     <% game.genres_of_game.each_with_index do |genre, index| %>
                       <%= index == 0 ? "" : "," %>
-                      <%= link_to genre.name, game_game_list_of_genre_path(:genre => genre.name)%>
+                      <%= link_to genre.name, game_game_list_of_genre_path(:genre => genre.name) %>
                     <% end %>
                   </div>
                   <div class="col-md-12">
                     <% if game.summary.length > 100 %>
-                      <p><%= truncate(game.summary, length: 100) %> <%=link_to "more", game_detail_path(id: game.id) %></p>
+                      <p><%= truncate(game.summary, length: 100) %> <%= link_to "more", game_detail_path(id: game.id) %></p>
                     <% else %>
                       <p><%= game.summary %></p>
                     <% end %>
@@ -86,6 +89,10 @@
             <% end %>
           <% end %>
         </div>
+      </div>
+      <div class="col-md-3 search-advance">
+        <%= render 'search/advance_search_box' %>
+        <%= render 'game/game_up_comming' %>
       </div>
     </div>
   </div>
