--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -44,13 +44,14 @@
             <% @search_results.each do |game| %>
               <div class="col-md-12 fix-pading-content">
                 <div class="col-xs-12 col-md-4">
-                  <%= link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game") %>
+                  <%= link_to game_detail_path(id: game.id) do %>
+                    <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game") if game.photos.first.present? %>
                   <% end %>
                 </div>
                 <div class="col-xs-12 col-md-8 content-game-home-page background-item ">
                   <div class="col-md-12">
-                    <%= link_to game_detail_path(id: game.id),{:class=>"name_game"}  do %> <%= game.name %>
-                      <% end %>
+                    <%= link_to game_detail_path(id: game.id), {:class => "name_game"} do %> <%= game.name %>
+                    <% end %>
                   </div>
                   <div class="col-xs-12 col-md-6">
                     <b>Release date: <%= game.relase_date.to_date %> </b>
@@ -89,17 +90,10 @@
           <% end %>
         </div>
       </div>
-
-      <!-- Search & Upcoming games list -->
-      <!--        <div class="col-md-12 text-center related-game ">Upcoming Games</div>-->
-      <%# @game_upcoming.each do |game| %>
-      <!--          <div class="col-md-12 text-center list-related-game">-->
-      <!--            <a href="#"><strong><%#= game.name %></strong>-->
-      <!--              <hr>-->
-      <!--              <strong><%#= game.relase_date.strftime("%F") %></strong>-->
-      <!--            </a>-->
-      <!--          </div>-->
-      <%# end %>
+      <div class="col-md-3 search-advance">
+        <%= render 'search/advance_search_box' %>
+        <%= render 'game/game_up_comming' %>
+      </div>
     </div>
   </div>
 </div>
