paginate game_list_of_genre/platform/search_result

--- a/app/views/game/game_list_of_platform.html.erb
+++ b/app/views/game/game_list_of_platform.html.erb
@@ -54,6 +54,7 @@
                 </div>
               </div>
             <% end %>
+            <p><%= will_paginate @game_list %></p>
           <% end %>
         </div>
       </div>
