--- a/app/views/game/game_list_of_genre.html.erb
+++ b/app/views/game/game_list_of_genre.html.erb
@@ -53,6 +53,7 @@
                 </div>
               </div>
             <% end %>
+            <p><%= will_paginate @game_list %></p>
           <% end %>
         </div>
       </div>
