--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -87,6 +87,7 @@
                 </div>
               </div>
             <% end %>
+            <p><%= will_paginate @search_results %></p>
           <% end %>
         </div>
       </div>
