add bookmark feature

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,7 +48,8 @@ a{
 }
 
 #menu {
-    background: rgba(128, 126, 126, 0.06) !important;
+    /*background: rgba(128, 126, 126, 0.06) !important;*/
+    background: #424242 !important;
 }
 
 #menu a {
