--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -7,12 +7,29 @@
         <div class="col-md-12">
           <div class="col-xs-12 col-md-5">
             <%= image_tag(@game.photos.first.image_url, :class => "img-responsive") if @game.photos.first.present? %>
+            <%unless current_user.nil?%>
+              <%if current_user.games.exists?@game.id %>
+                <div class="col-md-4 btn-my-list">
+                 <%= link_to undo_bookmark_path(game_id: @game.id) , cLass: "btn btn-danger", style: "margin-top: 25px; border-radius: 0px;",   method: :post do %>
+                          <i class="fa fa-fw fa-bookmark", style="color: black;"></i> UnBookmark
+                 <%end%>
+                </div>
+              <%else%>
+                <div class="col-md-4 btn-my-list">
+                  <%= link_to add_bookmark_path(game_id: @game.id) , cLass: "btn btn-danger", style: "margin-top: 25px; border-radius: 0px;",   method: :post do %>
+                          <i class="fa fa-fw fas fa-bookmark"></i> Bookmark
+                 <%end%>
+                </div>
+              <%end%>
+              <%end%>
           </div>
           <div class="col-xs-12 col-md-7 jouhou">
             <div>
-              <h2><%= @game.name %></h2>
-              <div class="header_shousai_game_star stars-outer">
-                <% if @game.reviews.average(:rating) != nil %>
+                 <h2><%= @game.name %></h2>
+       
+             
+                <div class="header_shousai_game_star stars-outer">
+                  <% if @game.reviews.average(:rating) != nil %>
                   <div class="stars-inner" style="width: <%= @game.reviews.average(:rating).round(1)*20 %>%"></div>
                 <% end %>
               </div>
