--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container-fuild">
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
 <div class="container">
   <div class="col-md-2 logo">
@@ -82,13 +82,13 @@
 </div>
 </nav>
 </div>
-
-
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100">
 			<span class="login100-form-logo">
-				<img src="../assets/log.png" alt="">
+        <div class="logo logo-sign">
+          <h1>Gem<span>KeK</span> </h1>
+        </div>
 			</span>
       <span class="login100-form-title p-b-34 p-t-27">
 				Sign Up
