--- a/app/views/game/game_list_of_genre.html.erb
+++ b/app/views/game/game_list_of_genre.html.erb
@@ -57,7 +57,7 @@
         </div>
       </div>
       <!-- Search & Upcoming games list -->
-      <div class="col-md-3">
+      <div class="col-md-3 search-advance">
         <%= render 'search/advance_search_box' %>
         <%= render 'game_up_comming' %>
       </div>
