--- a/app/views/game/game_list_of_platform.html.erb
+++ b/app/views/game/game_list_of_platform.html.erb
@@ -1,69 +1,76 @@
 <%= render 'page_title', title: 'GemKeK' %>
 
 <div id="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-9 fix-pading-content box-content">
-        <div class="col-md-12 fix-pading-content">
-          <% if @game_list == nil %>
-            <h3>No game found!</h3>
-          <% else %>
-            <% @game_list.each do |game| %>
-              <div class="col-md-12 fix-pading-content">
-                <div class="col-xs-12 col-md-4">
-                  <%= link_to game_detail_path(id: game.id) do %>
-                    <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game") if game.photos.first.present? %>
-                  <% end %>
-                </div>
-                <div class="">
-                  <div class="col-md-12">
-                    <%= link_to game_detail_path(id: game.id),{:class=>"name_game"} do %> <%= game.name %>
-                      <% end %>
-                  </div>
-                  <div class="col-xs-12 col-md-6">
-                    <b>Release date: <%= game.relase_date.to_date %> </b>
-                  </div>
-                  <div class="col-xs-12 col-md-6 fix-padding">
-                    <div class="star_home_page stars-outer">
-                      <% if game.reviews.average(:rating) != nil %>
-                        <div class="stars-inner" style="width: <%= game.reviews.average(:rating).round(1)*20 %>%"></div>
-                      <% end %>
-                    </div>
-                  </div>
-                  <div class="col-md-12">
-                    <b>Platform: </b>
-                    <% game.platform_of_game.each_with_index do |platform, index| %>
-                      <%= index == 0 ? "" : "," %>
-                      <%= link_to platform.name, game_game_list_of_platform_path(:platform => platform.name) %>
-                    <% end %>
-                  </div>
-                  <div class="col-md-12">
-                    <b>Genre: </b>
-                    <% game.genres_of_game.each_with_index do |genre, index| %>
-                      <%= index == 0 ? "" : "," %>
-                      <%= link_to genre.name, game_game_list_of_genre_path(:genre => genre.name)%>
-                    <% end %>
-                  </div>
-                  <div class="col-md-12">
-                    <% if game.summary.length > 100 %>
-                      <p><%= truncate(game.summary, length: 100) %> <%=link_to "more", game_detail_path(id: game.id) %></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9 fix-pading-content box-content">
+                <div class="col-md-12 fix-pading-content">
+                    <% if @game_list == nil %>
+                    <h3>No game found!</h3>
                     <% else %>
-                      <p><%= game.summary %></p>
+                    <% @game_list.each do |game| %>
+                    <div class="col-md-12 fix-pading-content">
+                        <div class="col-xs-12 col-md-4">
+                            <%= link_to game_detail_path(id: game.id) do %>
+                            <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game") if game.photos.first.present? %>
+                            <% end %>
+                        </div>
+                        <div class="col-xs-12 col-md-8 content-game-home-page background-item">
+                            <div class="col-md-12">
+                                <%= link_to game_detail_path(id: game.id),{:class=>"name_game"} do %>
+                                <%= game.name %>
+                                <% end %>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <b>Release date:
+                                    <%= game.relase_date.to_date %> </b>
+                            </div>
+                            <div class="col-xs-12 col-md-6 fix-padding">
+                                <div class="star_home_page stars-outer">
+                                    <% if game.reviews.average(:rating) != nil %>
+                                    <div class="stars-inner" style="width: <%= game.reviews.average(:rating).round(1)*20 %>%"></div>
+                                    <% end %>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <b>Platform: </b>
+                                <% game.platform_of_game.each_with_index do |platform, index| %>
+                                <%= index == 0 ? "" : "," %>
+                                <%= link_to platform.name, game_game_list_of_platform_path(:platform => platform.name) %>
+                                <% end %>
+                            </div>
+                            <div class="col-md-12">
+                                <b>Genre: </b>
+                                <% game.genres_of_game.each_with_index do |genre, index| %>
+                                <%= index == 0 ? "" : "," %>
+                                <%= link_to genre.name, game_game_list_of_genre_path(:genre => genre.name)%>
+                                <% end %>
+                            </div>
+                            <div class="col-md-12">
+                                <% if game.summary.length > 100 %>
+                                <p>
+                                    <%= truncate(game.summary, length: 100) %>
+                                    <%=link_to "more", game_detail_path(id: game.id) %>
+                                </p>
+                                <% else %>
+                                <p>
+                                    <%= game.summary %>
+                                </p>
+                                <% end %>
+                            </div>
+                        </div>
+                    </div>
                     <% end %>
-                  </div>
+                    <% end %>
                 </div>
-              </div>
-            <% end %>
-          <% end %>
+            </div>
+            <!-- Search & Upcoming games list -->
+            <div class="col-md-3 search-advance">
+                <%= render 'search/advance_search_box' %>
+                <%= render 'game_up_comming' %>
+            </div>
         </div>
-      </div>
-      <!-- Search & Upcoming games list -->
-      <div class="col-md-3">
-        <%= render 'search/advance_search_box' %>
-        <%= render 'game_up_comming' %>
-      </div>
     </div>
-  </div>
 </div>
 <!-- <script>
     var owl;
@@ -75,6 +82,7 @@
         autoplay: true,
         autoplayTimeout: 1000,
         autoplayHoverPause: true,
-        responsiveClass:true
+        responsiveClass: true,
+        navigation:true;
     });
 </script> -->
