--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container-fuild">
   <nav id="menu" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="col-md-2 logo">
