--- a/app/views/manage/games/index.html.erb
+++ b/app/views/manage/games/index.html.erb
@@ -93,12 +93,12 @@
             <table id="example1" class="table table-bordered table-striped">
               <thead>
               <tr>
-                <th>Name</th>
-                <th>Genere</th>
-                <th>Platform</th>
-                <th>Rating Score</th>
-                <th>Reviews</th>
-                <th>Action</th>
+                <th style="width:10%">Name</th>
+                <th style="width:10%">Genere</th>
+                <th style="width:20%">Platform</th>
+                <th style="width:10%">Rating Score</th>
+                <th style="width:10%">Reviews</th>
+                <th style="width:10%">Action</th>
               </tr>
               </thead>
               <tbody>
