speed up loading time

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -104,7 +104,7 @@
           <span class="focus-input100" data-placeholder=""></span>
         </div>
         <div class="wrap-input100 validate-input" data-validate = "Enter username">
-          <%= f.file_field :avatar , placeholder:"Avatar", class:"input100"%>
+          <%= f.file_field :avatar , placeholder:"Avatar", accept:'image/*', class:"input100"%>
           <span class="focus-input100" data-placeholder=""></span>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Enter password">
