--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,7 +23,7 @@
         
         <div class="form-group">
           <label>Change your Avatar:</label>
-          <%=f.file_field :avatar%>
+          <%=f.file_field :avatar, accept:'image/*'%>
         </div>
         <div class="form-group">
           <label>Current Password *:</label>
