--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,8 +54,7 @@ a{
     background: #424242 !important;
 }
 .url_link_game a { color: #fff !important;}
-.url_link_game a i { color: #fff !important;}
-.url_link_game a { }
+.url_link_game a i { color: #fff !important; padding-right: 3px;;}
 #menu a {
     color:white !important;
 }
