--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -130,80 +130,80 @@
             <div class="col-md-4 url_link_game">
               
               <% if @game.link1.include? "facebook" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "facebook", class: "fa-2x", text: "Facebook page"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page"%></a>
               <% elsif @game.link1.include? "steam" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "steam", class: "fa-2x", text: "Steam"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam"%></a>
               <% elsif @game.link1.include? "youtube" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "youtube", class: "fa-2x", text: "Youtube Channel"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel"%></a>
               <% elsif @game.link1.include? "wikipedia" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "wikipedia-w", class: "fa-2x", text: "Wikipedia"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia"%></a>
               <% elsif @game.link1.include? "wiki" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "file", class: "fa-2x", text: "Wikia"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia"%></a>
               <% elsif @game.link1.include? "twitter" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "twitter", class: "fa-2x", text: "Twitter Profile"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile"%></a>
               <% elsif @game.link1.include? "instagram" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "instagram", class: "fa-2x", text: "Instargram"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram"%></a>
               <% elsif @game.link1.include? "reddit" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "reddit", class: "fa-2x", text: "Subreddit"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit"%></a>
                <% elsif @game.link1.include? "gog" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "shopping-bag", class: "fa-2x", text: "gog.com"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com"%></a>
               <% elsif @game.link1.include? "apple" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "apple", class: "fa-2x", text: "App Store"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store"%></a>
               <% else %>
-              <a href=<%= @game.link1 %>><%= fa_icon "external-link", class: "fa-2x", text: "Office Website"%></a>
+              <a href=<%= @game.link1 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website"%></a>
               <% end %>
             </div>
             <% if @game.link2 %>
               <div class="col-md-4 url_link_game">
               <% if @game.link2.include? "facebook" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "facebook", class: "fa-2x", text: "Facebook page"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page"%></a>
               <% elsif @game.link2.include? "steam" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "steam", class: "fa-2x", text: "Steam"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam"%></a>
               <% elsif @game.link2.include? "youtube" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "youtube", class: "fa-2x", text: "Youtube Channel"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel"%></a>
               <% elsif @game.link2.include? "wikipedia" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "wikipedia-w", class: "fa-2x", text: "Wikipedia"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia"%></a>
               <% elsif @game.link2.include? "wiki" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "file", class: "fa-2x", text: "Wikia"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia"%></a>
               <% elsif @game.link2.include? "twitter" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "twitter", class: "fa-2x", text: "Twitter Profile"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile"%></a>
               <% elsif @game.link2.include? "instagram" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "instagram", class: "fa-2x", text: "Instargram"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram"%></a>
               <% elsif @game.link2.include? "reddit" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "reddit", class: "fa-2x", text: "Subreddit"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit"%></a>
                <% elsif @game.link2.include? "gog" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "shopping-bag", class: "fa-2x", text: "gog.com"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com"%></a>
               <% elsif @game.link2.include? "apple" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "apple", class: "fa-2x", text: "App Store"%></a
+              <a href=<%= @game.link2 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store"%></a
               <% else %>
-              <a href=<%= @game.link2 %>><%= fa_icon "external-link", class: "fa-2x", text: "Office Website"%></a>
+              <a href=<%= @game.link2 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website"%></a>
               <% end %>
               </div>
             <% end %>
             <% if @game.link3 %>
               <div class="col-md-4 url_link_game">
                 <% if @game.link3.include? "facebook" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "facebook", class: "fa-2x", text: "Facebook page"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page"%></a>
               <% elsif @game.link3.include? "steam" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "steam", class: "fa-2x", text: "Steam"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam"%></a>
               <% elsif @game.link3.include? "youtube" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "youtube", class: "fa-2x", text: "Youtube Channel"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel"%></a>
               <% elsif @game.link3.include? "wikipedia" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "wikipedia-w", class: "fa-2x", text: "Wikipedia"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia"%></a>
               <% elsif @game.link3.include? "wiki" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "file", class: "fa-2x", text: "Wikia"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia"%></a>
               <% elsif @game.link3.include? "twitter" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "twitter", class: "fa-2x", text: "Twitter Profile"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile"%></a>
               <% elsif @game.link3.include? "instagram" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "instagram", class: "fa-2x", text: "Instargram"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram"%></a>
               <% elsif @game.link3.include? "reddit" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "reddit", class: "fa-2x", text: "Subreddit"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit"%></a>
               <% elsif @game.link3.include? "gog" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "shopping-bag", class: "fa-2x", text: "gog.com"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com"%></a>
               <% elsif @game.link3.include? "apple" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "apple", class: "fa-2x", text: "App Store"%></a
+              <a href=<%= @game.link3 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store"%></a
               <% else %>
-              <a href=<%= @game.link3 %>><%= fa_icon "external-link", class: "fa-2x", text: "Office Website"%></a>
+              <a href=<%= @game.link3 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website"%></a>
               <% end %>
               </div>
             <% end %>
@@ -422,5 +422,6 @@
         autoplay: true,
         navigation: true,
         nav: true,
+        autoplayTimeout: 2300
     });
 </script>
