--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
           <li>
             <%= form_tag search_index_path, :method => 'get', :class => "navbar-form navbar-left search-header", :rolze => "search" do %>
               <div class="form-group">
-                <%= text_field_tag :search, params[:search], :value => "", :class => "form-control", placeholder: "search..." %>
+                <%= text_field_tag :search, params[:search], :value => "", :class => "form-control", placeholder: "Game, platform, genre..." %>
               </div>
               <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
             <% end %>
