--- a/app/views/search/_advance_search_box.html.erb
+++ b/app/views/search/_advance_search_box.html.erb
@@ -2,7 +2,7 @@
   <h2>Advance Search..</h2>
   <%= form_tag url_for(:controller => 'search', :action => 'advance_search'), :method => 'get' do %>
     <div class="form-group">
-      <%= text_field_tag :search, params[:search], :class => "form-control", :placeholder => "keyword..." %>
+      <%= text_field_tag :search, params[:search], :class => "form-control", :placeholder => "Keyword..." %>
     </div>
     <div class="form-group">
       <label for="sel1">Genre</label>
