--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -7,21 +7,10 @@
         <div class="col-md-12">
           <div class="col-xs-12 col-md-5">
             <%= image_tag(@game.photos.first.image_url, :class => "img-responsive") if @game.photos.first.present? %>
-            <%unless current_user.nil?%>
-              <%if current_user.games.exists?@game.id %>
-                <div class="col-md-4 btn-my-list">
-                 <%= link_to undo_bookmark_path(game_id: @game.id) , cLass: "btn btn-danger", style: "margin-top: 25px; border-radius: 0px;",   method: :post do %>
-                          <i class="fa fa-fw fa-bookmark", style="color: black;"></i> UnBookmark
-                 <%end%>
-                </div>
-              <%else%>
-                <div class="col-md-4 btn-my-list">
-                  <%= link_to add_bookmark_path(game_id: @game.id) , cLass: "btn btn-danger", style: "margin-top: 25px; border-radius: 0px;",   method: :post do %>
-                          <i class="fa fa-fw fas fa-bookmark"></i> Bookmark
-                 <%end%>
-                </div>
-              <%end%>
-              <%end%>
+            <div id ="bookmark_id">
+              <%=render "bookmark", game: @game%>
+            </div>
+            
           </div>
           <div class="col-xs-12 col-md-7 jouhou">
             <div>
@@ -244,6 +233,7 @@
                   <div class="col-md-12 ">
                     <div class="fix-content-review-space" style="margin: 20px 0px 15px 0px !important"><%= raw review.content[0, 300] %></div>
                     <div>
+
                       <%= render "reviews/like", object: review %>
 
                       <strong class="space-i"><%= review.comments.count() %> comments</strong>
