add video and more picture to game + delete advance search box

--- a/app/views/game/game_list_of_genre.html.erb
+++ b/app/views/game/game_list_of_genre.html.erb
@@ -59,7 +59,7 @@
       </div>
       <!-- Search & Upcoming games list -->
       <div class="col-md-3 search-advance">
-        <%= render 'search/advance_search_box' %>
+        <%#= render 'search/advance_search_box' %>
         <%= render 'game_up_comming' %>
       </div>
     </div>
