--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -6,19 +6,43 @@
       <div class="col-md-9">
         <div class="col-md-12">
           <div class="col-xs-12 col-md-5">
-            <%= image_tag(@game.photos.first.image_url, :class => "img-responsive") if @game.photos.first.present? %>
-            <div id ="bookmark_id">
-              <%=render "bookmark", game: @game%>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+                <% @game.photos.each.with_index do |t, index| %>
+                  <div class="item img-responsive <%= index == 0 ? 'active' : '' %>">
+                    <%= link_to game_detail_path(id: @game.id) do %>
+                      <%= image_tag(t.image_url, :alt => "First Slide") %>
+                    <% end %>
+                  </div>
+                <% end %>
+              </div>
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            
+            <br>
+            <iframe width=310 height=200 src="http://www.youtube.com/embed/<%= @game.yotube_id %>?rel=0&autoplay=<%= params[:autoplay] || 0 %>" frameborder="50" allowfullscreen></iframe>
+            <div id="bookmark_id">
+              <%= render "bookmark", game: @game %>
+            </div>
           </div>
           <div class="col-xs-12 col-md-7 jouhou">
             <div>
-                 <h2><%= @game.name %></h2>
-       
-             
-                <div class="header_shousai_game_star stars-outer">
-                  <% if @game.reviews.average(:rating) != nil %>
+              <h2><%= @game.name %></h2>
+
+
+              <div class="header_shousai_game_star stars-outer">
+                <% if @game.reviews.average(:rating) != nil %>
                   <div class="stars-inner" style="width: <%= @game.reviews.average(:rating).round(1)*20 %>%"></div>
                 <% end %>
               </div>
@@ -117,83 +141,83 @@
           <div class="col-md-8">
             <h2>GET GAME</h2>
             <div class="col-md-4 url_link_game">
-              
+
               <% if @game.link1.include? "facebook" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page" %></a>
               <% elsif @game.link1.include? "steam" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam" %></a>
               <% elsif @game.link1.include? "youtube" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel" %></a>
               <% elsif @game.link1.include? "wikipedia" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia" %></a>
               <% elsif @game.link1.include? "wiki" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia" %></a>
               <% elsif @game.link1.include? "twitter" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile" %></a>
               <% elsif @game.link1.include? "instagram" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram" %></a>
               <% elsif @game.link1.include? "reddit" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit"%></a>
-               <% elsif @game.link1.include? "gog" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit" %></a>
+              <% elsif @game.link1.include? "gog" %>
+                <a href=<%= @game.link1 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com" %></a>
               <% elsif @game.link1.include? "apple" %>
-              <a href=<%= @game.link1 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store" %></a>
               <% else %>
-              <a href=<%= @game.link1 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website"%></a>
+                <a href=<%= @game.link1 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website" %></a>
               <% end %>
             </div>
             <% if @game.link2 %>
               <div class="col-md-4 url_link_game">
-              <% if @game.link2.include? "facebook" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page"%></a>
-              <% elsif @game.link2.include? "steam" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam"%></a>
-              <% elsif @game.link2.include? "youtube" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel"%></a>
-              <% elsif @game.link2.include? "wikipedia" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia"%></a>
-              <% elsif @game.link2.include? "wiki" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia"%></a>
-              <% elsif @game.link2.include? "twitter" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile"%></a>
-              <% elsif @game.link2.include? "instagram" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram"%></a>
-              <% elsif @game.link2.include? "reddit" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit"%></a>
-               <% elsif @game.link2.include? "gog" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com"%></a>
-              <% elsif @game.link2.include? "apple" %>
-              <a href=<%= @game.link2 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store"%></a
-              <% else %>
-              <a href=<%= @game.link2 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website"%></a>
-              <% end %>
+                <% if @game.link2.include? "facebook" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page" %></a>
+                <% elsif @game.link2.include? "steam" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam" %></a>
+                <% elsif @game.link2.include? "youtube" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel" %></a>
+                <% elsif @game.link2.include? "wikipedia" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia" %></a>
+                <% elsif @game.link2.include? "wiki" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia" %></a>
+                <% elsif @game.link2.include? "twitter" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile" %></a>
+                <% elsif @game.link2.include? "instagram" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram" %></a>
+                <% elsif @game.link2.include? "reddit" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit" %></a>
+                <% elsif @game.link2.include? "gog" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com" %></a>
+                <% elsif @game.link2.include? "apple" %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store" %></a>
+                <% else %>
+                  <a href=<%= @game.link2 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website" %></a>
+                <% end %>
               </div>
             <% end %>
             <% if @game.link3 %>
               <div class="col-md-4 url_link_game">
                 <% if @game.link3.include? "facebook" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page"%></a>
-              <% elsif @game.link3.include? "steam" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam"%></a>
-              <% elsif @game.link3.include? "youtube" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel"%></a>
-              <% elsif @game.link3.include? "wikipedia" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia"%></a>
-              <% elsif @game.link3.include? "wiki" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia"%></a>
-              <% elsif @game.link3.include? "twitter" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile"%></a>
-              <% elsif @game.link3.include? "instagram" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram"%></a>
-              <% elsif @game.link3.include? "reddit" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit"%></a>
-              <% elsif @game.link3.include? "gog" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com"%></a>
-              <% elsif @game.link3.include? "apple" %>
-              <a href=<%= @game.link3 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store"%></a
-              <% else %>
-              <a href=<%= @game.link3 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website"%></a>
-              <% end %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "facebook", class: "fa-1x", text: " Facebook page" %></a>
+                <% elsif @game.link3.include? "steam" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "steam", class: "fa-1x", text: " Steam" %></a>
+                <% elsif @game.link3.include? "youtube" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "youtube", class: "fa-1x", text: " Youtube Channel" %></a>
+                <% elsif @game.link3.include? "wikipedia" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "wikipedia-w", class: "fa-1x", text: " Wikipedia" %></a>
+                <% elsif @game.link3.include? "wiki" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "file", class: "fa-1x", text: " Wikia" %></a>
+                <% elsif @game.link3.include? "twitter" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "twitter", class: "fa-1x", text: " Twitter Profile" %></a>
+                <% elsif @game.link3.include? "instagram" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "instagram", class: "fa-1x", text: " Instargram" %></a>
+                <% elsif @game.link3.include? "reddit" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "reddit", class: "fa-1x", text: " Subreddit" %></a>
+                <% elsif @game.link3.include? "gog" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "shopping-bag", class: "fa-1x", text: " gog.com" %></a>
+                <% elsif @game.link3.include? "apple" %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "apple", class: "fa-1x", text: " App Store" %></a>
+                <% else %>
+                  <a href=<%= @game.link3 %>><%= fa_icon "external-link", class: "fa-1x", text: " Office Website" %></a>
+                <% end %>
               </div>
             <% end %>
           </div>
@@ -290,7 +314,7 @@
       </div>
       <div class="col-md-3 search-advance">
         <div class="row ">
-          <%= render 'search/advance_search_box' %>
+          <%#= render 'search/advance_search_box' %>
           <%= render 'game_up_comming' %>
         </div>
       </div>
