--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -12,9 +12,31 @@
       <div class="col-md-9">
         <div class="col-md-12">
           <div class="col-xs-12 col-md-4 img-game-review">
-            <%= link_to game_detail_path(id: @review.game_id) do %>
-              <%= image_tag(@game.photos.first.image_url, :class => "img-responsive") %>
-            <% end %>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+                <% @game.photos.each.with_index do |t, index| %>
+                  <div class="item img-responsive <%= index == 0 ? 'active' : '' %>">
+                    <%= link_to game_detail_path(id: @game.id) do %>
+                      <%= image_tag(t.image_url, :alt => "First Slide") %>
+                    <% end %>
+                  </div>
+                <% end %>
+              </div>
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <br>
           </div>
           <div class="col-xs-12 col-md-8">
             <div class="about-text">
@@ -56,7 +78,7 @@
               <%= render "reviews/like", object: @review %>
               <br>
               <br>
-              </div>
+            </div>
           </div>
           <div class="col-md-12">
             <p><%= raw @review.content %></p>
@@ -83,8 +105,8 @@
         </div>
       </div>
       <div class="col-md-3 search-advance">
-        <%= render 'search/advance_search_box' %>
-        <!--        should be upcoming game -->
+        <%#= render 'search/advance_search_box' %>
+        <%= render 'game/game_up_comming' %>
       </div>
     </div>
   </div>
