--- a/app/views/game/_game_up_comming.html.erb
+++ b/app/views/game/_game_up_comming.html.erb
@@ -4,7 +4,7 @@
   <% @game_upcoming.each do |game| %>
     <div class="col-md-12 text-center list-related-game">
 
-      <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game", :size => "20x10") %>
+      <%= image_tag(game.photos.first.image.url, :class => "img-responsive fix-box-img-top-game", :size => "20x10") %>
       <br>
       <a><strong> <%= link_to game_detail_path(id: game.id) do %> <%= game.name %>
         <% end %></strong>
